plugins {
	id 'fabric-loom' version '1.9-SNAPSHOT'
	id 'java'
}

version = project.version
group = project.maven_group

base {

	archivesName = project.archives_base_name
}

java {
	withSourcesJar()
	withJavadocJar()
}

repositories {
	maven {
		name "KosmX's maven"
		url 'https://maven.kosmx.dev/'
	}

}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")

}


processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

/*publishing {
	publications {
		maven(MavenPublication) {
			from components.java
		}
	}
}*/

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}